<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.12">
  <GVL Name="Global_Variables" Id="{e7bd55fd-c88f-40b8-8631-e234f131863d}">
    <Declaration><![CDATA[VAR_GLOBAL CONSTANT
	PLCPRJ_BUFFER_SIZE						: UDINT := 1000;(* Max. internal fifo/receiver buffer size *)

(*	PLCPRJ_CLIENT_SEND_CYCLE_TIME			: TIME := T#1S; not used at server side *)
	PLCPRJ_RECEIVE_POLLING_TIME				: TIME := T#100MS;
	PLCPRJ_RECEIVE_TIMEOUT					: TIME := T#50S;

	(* Some project specific error codes *)
	PLCPRJ_ERROR_RECEIVE_TIMEOUT			: UDINT := 16#8101;(* Receive timeout *)
	PLCPRJ_ERROR_SENDFIFO_OVERFLOW			: UDINT := 16#8102;(* Send fifo overflow *)
	PLCPRJ_ERROR_RECFIFO_OVERFLOW			: UDINT := 16#8103;(* Receive fifo overflow *)
END_VAR
]]></Declaration>
  </GVL>
</TcPlcObject>